# ai-tutor

./: .chroma_env  .gitignore  BEFORE_AFTER_COMPARISON.md  CHANGELOG_QUIZ_PROFILE_UPDATES.md  INTENT_DETECTION_UPGRADE.md  MIGRATION_SUMMARY.md  MUST_RESTART.txt  NEW_FEATURES_QUICKSTART.md  QUICK_START_INTENT_DETECTION.md  README.md  RESTART_APP.md  SIMPLIFICATION_PROPOSAL.md  SIMPLIFICATION_SUMMARY.md  Source.gv  litellm_example.py  pyproject.toml  test_handoff.txt  test_handoff_v2.py  test_quiz.md
apps/: __init__.py  api.py  chat_helpers.py  corpus_tab.py  file_utils.py  quiz.py  ui.py
chroma_data/: chroma.sqlite3
chroma_mcp_server/: README.md  server.py
config/: default.yaml
docs/: FINAL_FIX_QUIZ_CONTEXT.md  FINAL_FIX_TWO_CODE_PATHS.md  FINAL_FIX_UPLOADED_DOCS.md  FIX_AGENT_REFUSAL.md  FIX_COUNT_EXTRACTION.md  FIX_MAX_TOKENS_QUIZ.md  FIX_NEW_FILE_RETRIEVAL.md  FIX_SOURCE_FILTERING.md  FIX_TOP_K_NUCLEAR_OPTION.md  HANDOFF_FIX_V2.md  HANDOFF_LOGIC_FIX.md  LEGACY_CODE_REMOVED.md  REFACTOR_COMPLETE.md  REMOVABLE_CODE.md  THE_REAL_ARCHITECTURE.md  THE_SIMPLE_FIX.md  TOKEN_OVERFLOW_FIX.md  VISUALIZATION_AGENT.md  VISUALIZATION_INTEGRATION.md  agent_architectures_comparison.md  architecture.puml  backend_api.md  blocking_issues_fixes.md  chat_learn_enhanced_features.md  chat_learn_workflow.md  chroma_design.md  chromadb_migration.md  components.puml  corpus_management_features.md  deduplication_behavior.md  demo.md  domain_collections.md  embedding_dimension_mismatch.md  frontend_backend_separation.md  llm_vs_keyword_detection.md  mcp.md  mcp_optimizations.md  (+10 more)
(+83 files in other folders)
